--- a/.github/workflows/main_angular-test-node-js.yml
+++ b/.github/workflows/main_angular-test-node-js.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: '${{ github.workspace }}/dist/test-project'
+          path: '${{ github.workspace }}/dist/test-project/node-app'
 
   deploy:
     runs-on: ubuntu-latest
