--- a/.github/workflows/main_angular-test-node-js.yml
+++ b/.github/workflows/main_angular-test-node-js.yml
@@ -24,13 +24,13 @@ jobs:
       - name: npm install, build
         run: |
           npm install
-          npm run build
+          npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: '${{ github.workspace }}/dist/test-project/node-app'
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
