--- a/.github/workflows/main_angular-test-node-js.yml
+++ b/.github/workflows/main_angular-test-node-js.yml
@@ -26,11 +26,14 @@ jobs:
           npm install
           npm run build --if-present
           
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+          
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./dist/test-project
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,6 +47,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+          
+      - name: unzip artifact for deployment
+        run: |
+          unzip release.zip
+          rm release.zip
 
 
       - name: 'Deploy to Azure Web App'
